1. update character status 2. update custom weapon

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -157,5 +157,6 @@
     "green":                "Green",
     "blue":                 "Blue",
     "white":                "White",
-    "purple":               "Purple"
+    "purple":               "Purple",
+    "type":                 "Type"
 }
