--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -157,5 +157,6 @@
     "green":                null,
     "blue":                 null,
     "white":                null,
-    "purple":               null
+    "purple":               null,
+    "type":                 null
 }
