--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -157,5 +157,6 @@
     "green":                "綠",
     "blue":                 "藍",
     "white":                "白",
-    "purple":               "紫"
+    "purple":               "紫",
+    "type":                 "類型"
 }
