--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -158,5 +158,6 @@
     "blue":                 "Blue",
     "white":                "White",
     "purple":               "Purple",
-    "type":                 "Type"
+    "type":                 "Type",
+    "enhanceFieldSize":     "Enhance Fields"
 }
