--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -158,5 +158,6 @@
     "blue":                 null,
     "white":                null,
     "purple":               null,
-    "type":                 null
+    "type":                 null,
+    "enhanceFieldSize":     null
 }
