--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -158,5 +158,6 @@
     "blue":                 "藍",
     "white":                "白",
     "purple":               "紫",
-    "type":                 "類型"
+    "type":                 "類型",
+    "enhanceFieldSize":     "強化欄數量"
 }
