--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -8,7 +8,7 @@
     "elementAttackEV":      "Points Element Attack EV",
     "name":                 "Name",
     "description":          "Description",
-    "extraInfo":            "Extra Info",
+    "benefitAnalysis":      "Benefit Analysis",
     "rawAttack":            "Raw Attack",
     "rawCriticalAttack":    "Raw Critical Attack",
     "rawEV":                "Raw Expected Value",
@@ -19,12 +19,9 @@
     "level":                "Level",
     "series":               "Series",
     "rare":                 "Rare",
-    "general":              "General",
     "health":               "Health",
     "stamina":              "Stamina",
     "property":             "Properties",
-    "attackProperty":       "Attack Properties",
-    "defenseProperty":      "Defense Properties",
     "attack":               "Attack",
     "elderseal":            "Elderseal",
     "defense":              "Defense",
