--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -8,7 +8,7 @@
     "elementAttackEV":      null,
     "name":                 "名前",
     "description":          "説明",
-    "extraInfo":            null,
+    "benefitAnalysis":      null,
     "rawAttack":            null,
     "rawCriticalAttack":    null,
     "rawEV":                null,
@@ -19,12 +19,9 @@
     "level":                "レベル",
     "series":               "派生",
     "rare":                 "レア",
-    "general":              null,
     "health":               null,
     "stamina":              null,
     "property":             null,
-    "attackProperty":       null,
-    "defenseProperty":      null,
     "attack":               "攻撃",
     "elderseal":            "龍封力",
     "defense":              "防御",
