--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -8,7 +8,7 @@
     "elementAttackEV":      "點屬性攻擊力期望值",
     "name":                 "名稱",
     "description":          "說明",
-    "extraInfo":            "額外資訊",
+    "benefitAnalysis":      "效益預估",
     "rawAttack":            "基礎傷害",
     "rawCriticalAttack":    "基礎會心傷害",
     "rawEV":                "基礎期望值",
@@ -19,12 +19,9 @@
     "level":                "等級",
     "series":               "衍生",
     "rare":                 "稀有度",
-    "general":              "一般",
     "health":               "體力",
     "stamina":              "耐力",
     "property":             "數值",
-    "attackProperty":       "攻擊數值",
-    "defenseProperty":      "防禦數值",
     "attack":               "攻擊力",
     "elderseal":            "龍封力",
     "defense":              "防禦力",
