--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -1,160 +1,159 @@
 {
-    "title":                "Monster Hunter World: Iceborne - Calculator",
-    "skillLevelZero":       "This skill will exclude in candidate bundles",
-    "every":                "Every",
-    "rawAttackEV":          "Points Raw Attack EV",
-    "criticalRateEV":       "Points Critical Rate EV",
-    "criticalMultipleEV":   "Points Critical Multiple EV",
-    "elementAttackEV":      "Points Element Attack EV",
-    "name":                 "Name",
-    "description":          "Description",
-    "benefitAnalysis":      "Benefit Analysis",
-    "rawAttack":            "Raw Attack",
-    "rawCriticalAttack":    "Raw Critical Attack",
-    "rawEV":                "Raw Expected Value",
-    "elementAttack":        "Element Attack",
-    "elementEV":            "Element Expected Value",
-    "totalEV":              "Total Expected Value",
-    "bundle":               "Bundle",
-    "level":                "Level",
-    "series":               "Series",
-    "rare":                 "Rare",
-    "health":               "Health",
-    "stamina":              "Stamina",
-    "property":             "Properties",
-    "attack":               "Attack",
-    "elderseal":            "Elderseal",
-    "defense":              "Defense",
-    "sharpness":            "Sharpness",
-    "criticalRate":         "Critical Rate",
-    "criticalMultiple":     "Critical Multiple",
-    "element":              "Element",
-    "attackElement":        "Attack Element",
-    "statusElement":        "Status Element",
-    "enhance":              "Enhance",
-    "slot":                 "Slot",
-    "remainingSlot":        "Remaining Slot",
-    "resistance":           "Resistance",
-    "set":                  "Set",
-    "size":                 "Size",
-    "low":                  "Low",
-    "medium":               "Medium",
-    "high":                 "High",
-    "fire":                 "Fire",
-    "water":                "Water",
-    "thunder":              "Thunder",
-    "ice":                  "Ice",
-    "dragon":               "Dragon",
-    "poison":               "Poison",
-    "paralysis":            "Paralysis",
-    "sleep":                "Sleep",
-    "blast":                "Blast",
-    "weapon":               "Weapon",
-    "helm":                 "Helm",
-    "chest":                "Chest",
-    "arm":                  "Arm",
-    "waist":                "Waist",
-    "leg":                  "Leg",
-    "charm":                "Charm",
-    "greatSword":           "Great Sword",
-    "longSword":            "Long Sword",
-    "swordAndShield":       "Sword And Shield",
-    "dualBlades":           "Dual Blades",
-    "hammer":               "Hammer",
-    "huntingHorn":          "Hunting Horn",
-    "lance":                "Lance",
-    "gunlance":             "Gunlance",
-    "switchAxe":            "Switch Axe",
-    "chargeBlade":          "Charge Blade",
-    "insectGlaive":         "Insect Glaive",
-    "lightBowgun":          "Light Bowgun",
-    "heavyBowgun":          "Heavy Bowgun",
-    "bow":                  "Bow",
-    "active":               "Active",
-    "deactive":             "Deactive",
-    "include":              "Include",
-    "exclude":              "Exclude",
-    "unlock":               "Unlock",
-    "lock":                 "Lock",
-    "equip":                "Equip",
-    "remove":               "Remove",
-    "add":                  "Add",
-    "change":               "Change",
-    "close":                "Close",
-    "select":               "Select",
-    "save":                 "Save",
-    "clean":                "Clean",
-    "up":                   "Up",
-    "down":                 "Down",
-    "skill":                "Skill",
-    "jewel":                "Decoration",
-    "set":                  "Set",
-    "reset":                "Reset",
-    "setting":              "Setting",
-    "search":               "Search",
-    "cancel":               "Cancel",
-    "inputKeyword":         "Input Keyword",
-    "inputName":            "Input Name",
-    "exportBundle":         "Export Bundle",
-    "requireCondition":     "Required Conditions",
-    "candidateBundle":      "Candidate Bundles",
-    "equipBundle":          "Equipped Bundle",
-    "status":               "Status",
-    "skillList":            "Skill List",
-    "setList":              "Set List",
-    "enhanceList":          "Enhance List",
-    "jewelList":            "Decoration List",
-    "charmList":            "Chram List",
-    "armorList":            "Armor List",
-    "weaponList":           "Weapon List",
-    "bundleList":           "Bundle List",
-    "algorithmSetting":     "Algorithm Setting",
-    "changelog":            "Change Log",
-    "readme":               "Readme",
-    "complexSort":          "Complex Value",
-    "defenseSort":          "Defense",
-    "fireSort":             "Resistance: Fire",
-    "waterSort":            "Resistance: Water",
-    "thunderSort":          "Resistance: Thunder",
-    "iceSort":              "Resistance: Ice",
-    "dragonSort":           "Resistance: Dragon",
-    "amountSort":           "Equip Amount",
-    "slotSort":             "Slot Amount",
-    "expectedValueSort":    "Expected Value",
-    "expectedLevelSort":    "Expected Level",
-    "resultLimit":          "Result Limit",
-    "sortBy":               "Sort By",
-    "sortOrder":            "Sort Order",
-    "strategy":             "Strategy",
-    "isEndEarly":           "Is End Early",
-    "isExpectBundle":       "Is Expect Bundle",
-    "isRequireConsistent":  "Is Require Consistent",
-    "armorFactor":          "Armor Factor",
-    "charmFactor":          "Charm Factor",
-    "jewelFactor":          "Jewel Factor",
-    "all":                  "All",
-    "unlimited":            "Unlimited",
-    "asc":                  "ASC",
-    "desc":                 "DESC",
-    "searching":            "Searching",
-    "bundleCount":          "Bundle Count",
-    "searchPercent":        "Percentage",
-    "timeRemaining":        "Remaining",
-    "basic":                "Basic",
-    "advanced":             "Advanced",
-    "hour":                 "h",
-    "minute":               "m",
-    "second":               "s",
-    "tab":                  "Tab",
-    "customWeapon":         "Custom Weapon",
-    "none":                 "None",
-    "red":                  "Red",
-    "orange":               "Orange",
-    "yellow":               "Yellow",
-    "green":                "Green",
-    "blue":                 "Blue",
-    "white":                "White",
-    "purple":               "Purple",
-    "type":                 "Type",
-    "enhanceFieldSize":     "Enhance Fields"
+    "title":                    "Monster Hunter World: Iceborne - Calculator",
+    "skillLevelZero":           "This skill will exclude in candidate bundles",
+    "perRawAttackEV":           "Raw Attack EV of Per Points",
+    "perCriticalRateEV":        "Critical Rate EV of Per Points",
+    "perCriticalMultipleEV":    "Critical Multiple EV of Per Points",
+    "perElementAttackEV":       "Element Attack EV of Per Points",
+    "name":                     "Name",
+    "description":              "Description",
+    "benefitAnalysis":          "Benefit Analysis",
+    "rawAttack":                "Raw Attack",
+    "rawCriticalAttack":        "Raw Critical Attack",
+    "rawEV":                    "Raw Expected Value",
+    "elementAttack":            "Element Attack",
+    "elementEV":                "Element Expected Value",
+    "totalEV":                  "Total Expected Value",
+    "bundle":                   "Bundle",
+    "level":                    "Level",
+    "series":                   "Series",
+    "rare":                     "Rare",
+    "health":                   "Health",
+    "stamina":                  "Stamina",
+    "property":                 "Properties",
+    "attack":                   "Attack",
+    "elderseal":                "Elderseal",
+    "defense":                  "Defense",
+    "sharpness":                "Sharpness",
+    "criticalRate":             "Critical Rate",
+    "criticalMultiple":         "Critical Multiple",
+    "element":                  "Element",
+    "attackElement":            "Attack Element",
+    "statusElement":            "Status Element",
+    "enhance":                  "Enhance",
+    "slot":                     "Slot",
+    "remainingSlot":            "Remaining Slot",
+    "resistance":               "Resistance",
+    "set":                      "Set",
+    "size":                     "Size",
+    "low":                      "Low",
+    "medium":                   "Medium",
+    "high":                     "High",
+    "fire":                     "Fire",
+    "water":                    "Water",
+    "thunder":                  "Thunder",
+    "ice":                      "Ice",
+    "dragon":                   "Dragon",
+    "poison":                   "Poison",
+    "paralysis":                "Paralysis",
+    "sleep":                    "Sleep",
+    "blast":                    "Blast",
+    "weapon":                   "Weapon",
+    "helm":                     "Helm",
+    "chest":                    "Chest",
+    "arm":                      "Arm",
+    "waist":                    "Waist",
+    "leg":                      "Leg",
+    "charm":                    "Charm",
+    "greatSword":               "Great Sword",
+    "longSword":                "Long Sword",
+    "swordAndShield":           "Sword And Shield",
+    "dualBlades":               "Dual Blades",
+    "hammer":                   "Hammer",
+    "huntingHorn":              "Hunting Horn",
+    "lance":                    "Lance",
+    "gunlance":                 "Gunlance",
+    "switchAxe":                "Switch Axe",
+    "chargeBlade":              "Charge Blade",
+    "insectGlaive":             "Insect Glaive",
+    "lightBowgun":              "Light Bowgun",
+    "heavyBowgun":              "Heavy Bowgun",
+    "bow":                      "Bow",
+    "active":                   "Active",
+    "deactive":                 "Deactive",
+    "include":                  "Include",
+    "exclude":                  "Exclude",
+    "unlock":                   "Unlock",
+    "lock":                     "Lock",
+    "equip":                    "Equip",
+    "remove":                   "Remove",
+    "add":                      "Add",
+    "change":                   "Change",
+    "close":                    "Close",
+    "select":                   "Select",
+    "save":                     "Save",
+    "clean":                    "Clean",
+    "up":                       "Up",
+    "down":                     "Down",
+    "skill":                    "Skill",
+    "jewel":                    "Decoration",
+    "set":                      "Set",
+    "reset":                    "Reset",
+    "setting":                  "Setting",
+    "search":                   "Search",
+    "cancel":                   "Cancel",
+    "inputKeyword":             "Input Keyword",
+    "inputName":                "Input Name",
+    "exportBundle":             "Export Bundle",
+    "requireCondition":         "Required Conditions",
+    "candidateBundle":          "Candidate Bundles",
+    "equipBundle":              "Equipped Bundle",
+    "status":                   "Status",
+    "skillList":                "Skill List",
+    "setList":                  "Set List",
+    "enhanceList":              "Enhance List",
+    "jewelList":                "Decoration List",
+    "charmList":                "Chram List",
+    "armorList":                "Armor List",
+    "weaponList":               "Weapon List",
+    "bundleList":               "Bundle List",
+    "algorithmSetting":         "Algorithm Setting",
+    "changelog":                "Change Log",
+    "readme":                   "Readme",
+    "complexSort":              "Complex Value",
+    "defenseSort":              "Defense",
+    "fireSort":                 "Resistance: Fire",
+    "waterSort":                "Resistance: Water",
+    "thunderSort":              "Resistance: Thunder",
+    "iceSort":                  "Resistance: Ice",
+    "dragonSort":               "Resistance: Dragon",
+    "amountSort":               "Equip Amount",
+    "slotSort":                 "Slot Amount",
+    "expectedValueSort":        "Expected Value",
+    "expectedLevelSort":        "Expected Level",
+    "resultLimit":              "Result Limit",
+    "sortBy":                   "Sort By",
+    "sortOrder":                "Sort Order",
+    "strategy":                 "Strategy",
+    "isEndEarly":               "Is End Early",
+    "isExpectBundle":           "Is Expect Bundle",
+    "isRequireConsistent":      "Is Require Consistent",
+    "armorFactor":              "Armor Factor",
+    "charmFactor":              "Charm Factor",
+    "jewelFactor":              "Jewel Factor",
+    "all":                      "All",
+    "unlimited":                "Unlimited",
+    "asc":                      "ASC",
+    "desc":                     "DESC",
+    "searching":                "Searching",
+    "bundleCount":              "Bundle Count",
+    "searchPercent":            "Percentage",
+    "timeRemaining":            "Remaining",
+    "basic":                    "Basic",
+    "advanced":                 "Advanced",
+    "hour":                     "h",
+    "minute":                   "m",
+    "second":                   "s",
+    "tab":                      "Tab",
+    "customWeapon":             "Custom Weapon",
+    "none":                     "None",
+    "red":                      "Red",
+    "orange":                   "Orange",
+    "yellow":                   "Yellow",
+    "green":                    "Green",
+    "blue":                     "Blue",
+    "white":                    "White",
+    "purple":                   "Purple",
+    "type":                     "Type",
+    "enhanceFieldSize":         "Enhance Fields"
 }
