--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -1,160 +1,159 @@
 {
-    "title":                "モンスターハンターワールド：アイスボーン - 計算機",
-    "skillLevelZero":       null,
-    "every":                null,
-    "rawAttackEV":          null,
-    "criticalRateEV":       null,
-    "criticalMultipleEV":   null,
-    "elementAttackEV":      null,
-    "name":                 "名前",
-    "description":          "説明",
-    "benefitAnalysis":      null,
-    "rawAttack":            null,
-    "rawCriticalAttack":    null,
-    "rawEV":                null,
-    "elementAttack":        null,
-    "elementEV":            null,
-    "totalEV":              null,
-    "bundle":               null,
-    "level":                "レベル",
-    "series":               "派生",
-    "rare":                 "レア",
-    "health":               null,
-    "stamina":              null,
-    "property":             null,
-    "attack":               "攻撃",
-    "elderseal":            "龍封力",
-    "defense":              "防御",
-    "sharpness":            "斬れ味",
-    "criticalRate":         "会心",
-    "criticalMultiple":     null,
-    "element":              "属性",
-    "attackElement":        null,
-    "statusElement":        null,
-    "enhance":              null,
-    "slot":                 "スロット",
-    "remainingSlot":        null,
-    "resistance":           null,
-    "set":                  null,
-    "size":                 null,
-    "low":                  "小",
-    "medium":               "中",
-    "high":                 "大",
-    "fire":                 "火",
-    "water":                "水",
-    "thunder":              "雷",
-    "ice":                  "氷",
-    "dragon":               "龍",
-    "poison":               "毒",
-    "paralysis":            "麻痺",
-    "sleep":                "睡眠",
-    "blast":                "爆破",
-    "weapon":               "武器",
-    "helm":                 "頭",
-    "chest":                "胴",
-    "arm":                  "腕",
-    "waist":                "腰",
-    "leg":                  "脚",
-    "charm":                "護石",
-    "greatSword":           "大剣",
-    "longSword":            "太刀",
-    "swordAndShield":       "片手剣",
-    "dualBlades":           "双剣",
-    "hammer":               "ハンマー",
-    "huntingHorn":          "狩猟笛",
-    "lance":                "ランス",
-    "gunlance":             "ガンランス",
-    "switchAxe":            "スラッシュアックス",
-    "chargeBlade":          "チャージアックス",
-    "insectGlaive":         "操虫棍",
-    "lightBowgun":          "ライトボウガン",
-    "heavyBowgun":          "ヘビィボウガン",
-    "bow":                  "弓",
-    "active":               null,
-    "deactive":             null,
-    "include":              "入れる",
-    "exclude":              "抜かす",
-    "unlock":               "ロック解除",
-    "lock":                 "ロック",
-    "equip":                "装備",
-    "remove":               null,
-    "add":                  null,
-    "change":               null,
-    "close":                null,
-    "select":               null,
-    "save":                 "保存",
-    "clean":                null,
-    "up":                   null,
-    "down":                 null,
-    "skill":                "スキル",
-    "jewel":                "装飾品",
-    "set":                  null,
-    "reset":                null,
-    "setting":              null,
-    "search":               null,
-    "cancel":               null,
-    "inputKeyword":         null,
-    "inputName":            null,
-    "exportBundle":         null,
-    "requireCondition":     null,
-    "candidateBundle":      null,
-    "equipBundle":          null,
-    "status":               null,
-    "skillList":            null,
-    "setList":              null,
-    "enhanceList":          null,
-    "jewelList":            null,
-    "charmList":            null,
-    "armorList":            null,
-    "weaponList":           null,
-    "bundleList":           null,
-    "algorithmSetting":     null,
-    "changelog":            "変更履歴",
-    "readme":               null,
-    "complexSort":          null,
-    "defenseSort":          null,
-    "fireSort":             null,
-    "waterSort":            null,
-    "thunderSort":          null,
-    "iceSort":              null,
-    "dragonSort":           null,
-    "amountSort":           null,
-    "slotSort":             null,
-    "expectedValueSort":    null,
-    "expectedLevelSort":    null,
-    "resultLimit":          null,
-    "sortBy":               null,
-    "sortOrder":            null,
-    "strategy":             null,
-    "isEndEarly":           null,
-    "isExpectBundle":       null,
-    "isRequireConsistent":  null,
-    "armorFactor":          null,
-    "charmFactor":          null,
-    "jewelFactor":          null,
-    "all":                  null,
-    "unlimited":            null,
-    "asc":                  null,
-    "desc":                 null,
-    "searching":            null,
-    "bundleCount":          null,
-    "searchPercent":        null,
-    "timeRemaining":        null,
-    "basic":                null,
-    "advanced":             null,
-    "hour":                 "時",
-    "minute":               "分",
-    "second":               "秒",
-    "tab":                  null,
-    "customWeapon":         null,
-    "none":                 null,
-    "red":                  null,
-    "orange":               null,
-    "yellow":               null,
-    "green":                null,
-    "blue":                 null,
-    "white":                null,
-    "purple":               null,
-    "type":                 null,
-    "enhanceFieldSize":     null
+    "title":                    "モンスターハンターワールド：アイスボーン - 計算機",
+    "skillLevelZero":           null,
+    "perRawAttackEV":           null,
+    "perCriticalRateEV":        null,
+    "perCriticalMultipleEV":    null,
+    "perElementAttackEV":       null,
+    "name":                     "名前",
+    "description":              "説明",
+    "benefitAnalysis":          null,
+    "rawAttack":                null,
+    "rawCriticalAttack":        null,
+    "rawEV":                    null,
+    "elementAttack":            null,
+    "elementEV":                null,
+    "totalEV":                  null,
+    "bundle":                   null,
+    "level":                    "レベル",
+    "series":                   "派生",
+    "rare":                     "レア",
+    "health":                   null,
+    "stamina":                  null,
+    "property":                 null,
+    "attack":                   "攻撃",
+    "elderseal":                "龍封力",
+    "defense":                  "防御",
+    "sharpness":                "斬れ味",
+    "criticalRate":             "会心",
+    "criticalMultiple":         null,
+    "element":                  "属性",
+    "attackElement":            null,
+    "statusElement":            null,
+    "enhance":                  null,
+    "slot":                     "スロット",
+    "remainingSlot":            null,
+    "resistance":               null,
+    "set":                      null,
+    "size":                     null,
+    "low":                      "小",
+    "medium":                   "中",
+    "high":                     "大",
+    "fire":                     "火",
+    "water":                    "水",
+    "thunder":                  "雷",
+    "ice":                      "氷",
+    "dragon":                   "龍",
+    "poison":                   "毒",
+    "paralysis":                "麻痺",
+    "sleep":                    "睡眠",
+    "blast":                    "爆破",
+    "weapon":                   "武器",
+    "helm":                     "頭",
+    "chest":                    "胴",
+    "arm":                      "腕",
+    "waist":                    "腰",
+    "leg":                      "脚",
+    "charm":                    "護石",
+    "greatSword":               "大剣",
+    "longSword":                "太刀",
+    "swordAndShield":           "片手剣",
+    "dualBlades":               "双剣",
+    "hammer":                   "ハンマー",
+    "huntingHorn":              "狩猟笛",
+    "lance":                    "ランス",
+    "gunlance":                 "ガンランス",
+    "switchAxe":                "スラッシュアックス",
+    "chargeBlade":              "チャージアックス",
+    "insectGlaive":             "操虫棍",
+    "lightBowgun":              "ライトボウガン",
+    "heavyBowgun":              "ヘビィボウガン",
+    "bow":                      "弓",
+    "active":                   null,
+    "deactive":                 null,
+    "include":                  "入れる",
+    "exclude":                  "抜かす",
+    "unlock":                   "ロック解除",
+    "lock":                     "ロック",
+    "equip":                    "装備",
+    "remove":                   null,
+    "add":                      null,
+    "change":                   null,
+    "close":                    null,
+    "select":                   null,
+    "save":                     "保存",
+    "clean":                    null,
+    "up":                       null,
+    "down":                     null,
+    "skill":                    "スキル",
+    "jewel":                    "装飾品",
+    "set":                      null,
+    "reset":                    null,
+    "setting":                  null,
+    "search":                   null,
+    "cancel":                   null,
+    "inputKeyword":             null,
+    "inputName":                null,
+    "exportBundle":             null,
+    "requireCondition":         null,
+    "candidateBundle":          null,
+    "equipBundle":              null,
+    "status":                   null,
+    "skillList":                null,
+    "setList":                  null,
+    "enhanceList":              null,
+    "jewelList":                null,
+    "charmList":                null,
+    "armorList":                null,
+    "weaponList":               null,
+    "bundleList":               null,
+    "algorithmSetting":         null,
+    "changelog":                "変更履歴",
+    "readme":                   null,
+    "complexSort":              null,
+    "defenseSort":              null,
+    "fireSort":                 null,
+    "waterSort":                null,
+    "thunderSort":              null,
+    "iceSort":                  null,
+    "dragonSort":               null,
+    "amountSort":               null,
+    "slotSort":                 null,
+    "expectedValueSort":        null,
+    "expectedLevelSort":        null,
+    "resultLimit":              null,
+    "sortBy":                   null,
+    "sortOrder":                null,
+    "strategy":                 null,
+    "isEndEarly":               null,
+    "isExpectBundle":           null,
+    "isRequireConsistent":      null,
+    "armorFactor":              null,
+    "charmFactor":              null,
+    "jewelFactor":              null,
+    "all":                      null,
+    "unlimited":                null,
+    "asc":                      null,
+    "desc":                     null,
+    "searching":                null,
+    "bundleCount":              null,
+    "searchPercent":            null,
+    "timeRemaining":            null,
+    "basic":                    null,
+    "advanced":                 null,
+    "hour":                     "時",
+    "minute":                   "分",
+    "second":                   "秒",
+    "tab":                      null,
+    "customWeapon":             null,
+    "none":                     null,
+    "red":                      null,
+    "orange":                   null,
+    "yellow":                   null,
+    "green":                    null,
+    "blue":                     null,
+    "white":                    null,
+    "purple":                   null,
+    "type":                     null,
+    "enhanceFieldSize":         null
 }
