--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -1,160 +1,159 @@
 {
-    "title":                "魔物獵人世界: 冰原 - 配裝計算機",
-    "skillLevelZero":       "此技能將不會出現在備選中",
-    "every":                "每",
-    "rawAttackEV":          "點基礎攻擊力期望值",
-    "criticalRateEV":       "點會心率期望值",
-    "criticalMultipleEV":   "點會心倍數期望值",
-    "elementAttackEV":      "點屬性攻擊力期望值",
-    "name":                 "名稱",
-    "description":          "說明",
-    "benefitAnalysis":      "效益預估",
-    "rawAttack":            "基礎傷害",
-    "rawCriticalAttack":    "基礎會心傷害",
-    "rawEV":                "基礎期望值",
-    "elementAttack":        "屬性傷害",
-    "elementEV":            "屬性期望值",
-    "totalEV":              "總期望值",
-    "bundle":               "組合",
-    "level":                "等級",
-    "series":               "衍生",
-    "rare":                 "稀有度",
-    "health":               "體力",
-    "stamina":              "耐力",
-    "property":             "數值",
-    "attack":               "攻擊力",
-    "elderseal":            "龍封力",
-    "defense":              "防禦力",
-    "sharpness":            "銳利度",
-    "criticalRate":         "會心率",
-    "criticalMultiple":     "會心倍數",
-    "element":              "屬性",
-    "attackElement":        "攻擊屬性",
-    "statusElement":        "狀態屬性",
-    "enhance":              "強化",
-    "slot":                 "插槽",
-    "remainingSlot":        "剩餘插槽",
-    "resistance":           "抗性",
-    "set":                  "套裝",
-    "size":                 "大小",
-    "low":                  "小",
-    "medium":               "中",
-    "high":                 "大",
-    "fire":                 "火",
-    "water":                "水",
-    "thunder":              "雷",
-    "ice":                  "冰",
-    "dragon":               "龍",
-    "poison":               "毒",
-    "paralysis":            "麻痺",
-    "sleep":                "睡眠",
-    "blast":                "爆破",
-    "weapon":               "武器",
-    "helm":                 "頭",
-    "chest":                "身",
-    "arm":                  "手",
-    "waist":                "腰",
-    "leg":                  "腳",
-    "charm":                "護石",
-    "greatSword":           "大劍",
-    "longSword":            "太刀",
-    "swordAndShield":       "片手劍",
-    "dualBlades":           "雙劍",
-    "hammer":               "大錘",
-    "huntingHorn":          "狩獵笛",
-    "lance":                "長槍",
-    "gunlance":             "銃槍",
-    "switchAxe":            "斬擊斧",
-    "chargeBlade":          "充能斧",
-    "insectGlaive":         "操蟲棍",
-    "lightBowgun":          "輕弩",
-    "heavyBowgun":          "重弩",
-    "bow":                  "弓",
-    "active":               "發動",
-    "deactive":             "解除",
-    "include":              "引入",
-    "exclude":              "排除",
-    "unlock":               "解除",
-    "lock":                 "鎖定",
-    "equip":                "裝備",
-    "remove":               "移除",
-    "add":                  "新增",
-    "change":               "更改",
-    "close":                "關閉",
-    "select":               "選取",
-    "save":                 "儲存",
-    "clean":                "清除",
-    "up":                   "提升",
-    "down":                 "降低",
-    "skill":                "技能",
-    "jewel":                "裝飾珠",
-    "set":                  "套裝",
-    "reset":                "重置",
-    "setting":              "設定",
-    "search":               "搜尋",
-    "cancel":               "取消",
-    "inputKeyword":         "輸入關鍵字",
-    "inputName":            "輸入配裝名稱",
-    "exportBundle":         "匯出裝備",
-    "requireCondition":     "需求條件",
-    "candidateBundle":      "備選組合",
-    "equipBundle":          "已選裝備",
-    "status":               "狀態",
-    "skillList":            "技能列表",
-    "setList":              "套裝列表",
-    "enhanceList":          "強化列表",
-    "jewelList":            "裝飾珠列表",
-    "charmList":            "護石列表",
-    "armorList":            "裝甲列表",
-    "weaponList":           "武器列表",
-    "bundleList":           "配裝清單",
-    "algorithmSetting":     "搜尋設定",
-    "changelog":            "更新紀錄",
-    "readme":               "使用說明",
-    "complexSort":          "綜合數值",
-    "defenseSort":          "防禦力",
-    "fireSort":             "火屬性",
-    "waterSort":            "水屬性",
-    "thunderSort":          "雷屬性",
-    "iceSort":              "冰屬性",
-    "dragonSort":           "龍屬性",
-    "amountSort":           "裝備數量",
-    "slotSort":             "插槽數量",
-    "expectedValueSort":    "期望數值",
-    "expectedLevelSort":    "期望等級",
-    "resultLimit":          "結果數量",
-    "sortBy":               "排序依據",
-    "sortOrder":            "排序順序",
-    "strategy":             "搜尋策略",
-    "isEndEarly":           "提早終止",
-    "isExpectBundle":       "期望預測",
-    "isRequireConsistent":  "需求一致",
-    "armorFactor":          "裝甲因子",
-    "charmFactor":          "護石因子",
-    "jewelFactor":          "裝飾珠因子",
-    "all":                  "全部",
-    "unlimited":            "無限",
-    "asc":                  "升冪",
-    "desc":                 "降冪",
-    "searching":            "搜尋中",
-    "bundleCount":          "數量",
-    "searchPercent":        "進度",
-    "timeRemaining":        "剩餘",
-    "basic":                "初階",
-    "advanced":             "進階",
-    "hour":                 "時",
-    "minute":               "分",
-    "second":               "秒",
-    "tab":                  "分頁",
-    "customWeapon":         "自訂武器",
-    "none":                 "無",
-    "red":                  "紅",
-    "orange":               "橘",
-    "yellow":               "黃",
-    "green":                "綠",
-    "blue":                 "藍",
-    "white":                "白",
-    "purple":               "紫",
-    "type":                 "類型",
-    "enhanceFieldSize":     "強化欄數量"
+    "title":                    "魔物獵人世界: 冰原 - 配裝計算機",
+    "skillLevelZero":           "此技能將不會出現在備選中",
+    "perRawAttackEV":           "每點基礎攻擊力期望值",
+    "perCriticalRateEV":        "每點會心率期望值",
+    "perCriticalMultipleEV":    "每點會心倍數期望值",
+    "perElementAttackEV":       "每點屬性攻擊力期望值",
+    "name":                     "名稱",
+    "description":              "說明",
+    "benefitAnalysis":          "效益預估",
+    "rawAttack":                "基礎傷害",
+    "rawCriticalAttack":        "基礎會心傷害",
+    "rawEV":                    "基礎期望值",
+    "elementAttack":            "屬性傷害",
+    "elementEV":                "屬性期望值",
+    "totalEV":                  "總期望值",
+    "bundle":                   "組合",
+    "level":                    "等級",
+    "series":                   "衍生",
+    "rare":                     "稀有度",
+    "health":                   "體力",
+    "stamina":                  "耐力",
+    "property":                 "數值",
+    "attack":                   "攻擊力",
+    "elderseal":                "龍封力",
+    "defense":                  "防禦力",
+    "sharpness":                "銳利度",
+    "criticalRate":             "會心率",
+    "criticalMultiple":         "會心倍數",
+    "element":                  "屬性",
+    "attackElement":            "攻擊屬性",
+    "statusElement":            "狀態屬性",
+    "enhance":                  "強化",
+    "slot":                     "插槽",
+    "remainingSlot":            "剩餘插槽",
+    "resistance":               "抗性",
+    "set":                      "套裝",
+    "size":                     "大小",
+    "low":                      "小",
+    "medium":                   "中",
+    "high":                     "大",
+    "fire":                     "火",
+    "water":                    "水",
+    "thunder":                  "雷",
+    "ice":                      "冰",
+    "dragon":                   "龍",
+    "poison":                   "毒",
+    "paralysis":                "麻痺",
+    "sleep":                    "睡眠",
+    "blast":                    "爆破",
+    "weapon":                   "武器",
+    "helm":                     "頭",
+    "chest":                    "身",
+    "arm":                      "手",
+    "waist":                    "腰",
+    "leg":                      "腳",
+    "charm":                    "護石",
+    "greatSword":               "大劍",
+    "longSword":                "太刀",
+    "swordAndShield":           "片手劍",
+    "dualBlades":               "雙劍",
+    "hammer":                   "大錘",
+    "huntingHorn":              "狩獵笛",
+    "lance":                    "長槍",
+    "gunlance":                 "銃槍",
+    "switchAxe":                "斬擊斧",
+    "chargeBlade":              "充能斧",
+    "insectGlaive":             "操蟲棍",
+    "lightBowgun":              "輕弩",
+    "heavyBowgun":              "重弩",
+    "bow":                      "弓",
+    "active":                   "發動",
+    "deactive":                 "解除",
+    "include":                  "引入",
+    "exclude":                  "排除",
+    "unlock":                   "解除",
+    "lock":                     "鎖定",
+    "equip":                    "裝備",
+    "remove":                   "移除",
+    "add":                      "新增",
+    "change":                   "更改",
+    "close":                    "關閉",
+    "select":                   "選取",
+    "save":                     "儲存",
+    "clean":                    "清除",
+    "up":                       "提升",
+    "down":                     "降低",
+    "skill":                    "技能",
+    "jewel":                    "裝飾珠",
+    "set":                      "套裝",
+    "reset":                    "重置",
+    "setting":                  "設定",
+    "search":                   "搜尋",
+    "cancel":                   "取消",
+    "inputKeyword":             "輸入關鍵字",
+    "inputName":                "輸入配裝名稱",
+    "exportBundle":             "匯出裝備",
+    "requireCondition":         "需求條件",
+    "candidateBundle":          "備選組合",
+    "equipBundle":              "已選裝備",
+    "status":                   "狀態",
+    "skillList":                "技能列表",
+    "setList":                  "套裝列表",
+    "enhanceList":              "強化列表",
+    "jewelList":                "裝飾珠列表",
+    "charmList":                "護石列表",
+    "armorList":                "裝甲列表",
+    "weaponList":               "武器列表",
+    "bundleList":               "配裝清單",
+    "algorithmSetting":         "搜尋設定",
+    "changelog":                "更新紀錄",
+    "readme":                   "使用說明",
+    "complexSort":              "綜合數值",
+    "defenseSort":              "防禦力",
+    "fireSort":                 "火屬性",
+    "waterSort":                "水屬性",
+    "thunderSort":              "雷屬性",
+    "iceSort":                  "冰屬性",
+    "dragonSort":               "龍屬性",
+    "amountSort":               "裝備數量",
+    "slotSort":                 "插槽數量",
+    "expectedValueSort":        "期望數值",
+    "expectedLevelSort":        "期望等級",
+    "resultLimit":              "結果數量",
+    "sortBy":                   "排序依據",
+    "sortOrder":                "排序順序",
+    "strategy":                 "搜尋策略",
+    "isEndEarly":               "提早終止",
+    "isExpectBundle":           "期望預測",
+    "isRequireConsistent":      "需求一致",
+    "armorFactor":              "裝甲因子",
+    "charmFactor":              "護石因子",
+    "jewelFactor":              "裝飾珠因子",
+    "all":                      "全部",
+    "unlimited":                "無限",
+    "asc":                      "升冪",
+    "desc":                     "降冪",
+    "searching":                "搜尋中",
+    "bundleCount":              "數量",
+    "searchPercent":            "進度",
+    "timeRemaining":            "剩餘",
+    "basic":                    "初階",
+    "advanced":                 "進階",
+    "hour":                     "時",
+    "minute":                   "分",
+    "second":                   "秒",
+    "tab":                      "分頁",
+    "customWeapon":             "自訂武器",
+    "none":                     "無",
+    "red":                      "紅",
+    "orange":                   "橘",
+    "yellow":                   "黃",
+    "green":                    "綠",
+    "blue":                     "藍",
+    "white":                    "白",
+    "purple":                   "紫",
+    "type":                     "類型",
+    "enhanceFieldSize":         "強化欄數量"
 }
