--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -1,17 +1,18 @@
 {
     "title":                    "Monster Hunter World: Iceborne - Calculator",
     "skillLevelZero":           "This skill will exclude in candidate bundles",
-    "perRawAttackEV":           "Raw Attack EV of Per Points",
+    "perPhysicalAttackEV":      "Physical Attack EV of Per Points",
     "perCriticalRateEV":        "Critical Rate EV of Per Points",
     "perCriticalMultipleEV":    "Critical Multiple EV of Per Points",
     "perElementAttackEV":       "Element Attack EV of Per Points",
     "name":                     "Name",
     "description":              "Description",
     "benefitAnalysis":          "Benefit Analysis",
-    "rawAttack":                "Raw Attack",
-    "rawCriticalAttack":        "Raw Critical Attack",
-    "rawEV":                    "Raw Expected Value",
+    "physicalAttack":           "Physical Attack",
+    "physicalCriticalAttack":   "Physical Critical Attack",
+    "physicalEV":               "Physical Expected Value",
     "elementAttack":            "Element Attack",
+    "elementCriticalAttack":    "Element Critical Attack",
     "elementEV":                "Element Expected Value",
     "totalEV":                  "Total Expected Value",
     "bundle":                   "Bundle",
