--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -1,17 +1,18 @@
 {
     "title":                    "モンスターハンターワールド：アイスボーン - 計算機",
     "skillLevelZero":           null,
-    "perRawAttackEV":           null,
+    "perPhysicalAttackEV":           null,
     "perCriticalRateEV":        null,
     "perCriticalMultipleEV":    null,
     "perElementAttackEV":       null,
     "name":                     "名前",
     "description":              "説明",
     "benefitAnalysis":          null,
-    "rawAttack":                null,
-    "rawCriticalAttack":        null,
-    "rawEV":                    null,
+    "physicalAttack":           null,
+    "physicalCriticalAttack":   null,
+    "physicalEV":               null,
     "elementAttack":            null,
+    "elementCriticalAttack":    null,
     "elementEV":                null,
     "totalEV":                  null,
     "bundle":                   null,
