--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -1,17 +1,18 @@
 {
     "title":                    "魔物獵人世界: 冰原 - 配裝計算機",
     "skillLevelZero":           "此技能將不會出現在備選中",
-    "perRawAttackEV":           "每點基礎攻擊力期望值",
+    "perPhysicalAttackEV":      "每點物理攻擊力期望值",
     "perCriticalRateEV":        "每點會心率期望值",
     "perCriticalMultipleEV":    "每點會心倍數期望值",
     "perElementAttackEV":       "每點屬性攻擊力期望值",
     "name":                     "名稱",
     "description":              "說明",
     "benefitAnalysis":          "效益預估",
-    "rawAttack":                "基礎傷害",
-    "rawCriticalAttack":        "基礎會心傷害",
-    "rawEV":                    "基礎期望值",
+    "physicalAttack":           "物理傷害",
+    "physicalCriticalAttack":   "物理會心傷害",
+    "physicalEV":               "物理期望值",
     "elementAttack":            "屬性傷害",
+    "elementCriticalAttack":    "屬性會心傷害",
     "elementEV":                "屬性期望值",
     "totalEV":                  "總期望值",
     "bundle":                   "組合",
