--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -158,6 +158,8 @@
     "type":                     null,
     "enhanceFieldSize":         null,
     "searchCondition":          null,
+    "requiredEquips":           null,
+    "requiredJewels":           null,
     "additionalSets":           null,
     "additionalSkills":         null
 }
