--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -158,6 +158,8 @@
     "type":                     "Type",
     "enhanceFieldSize":         "Enhance Fields",
     "searchCondition":          "Search Condition",
+    "requiredEquips":           "Required Equips",
+    "requiredJewels":           "Required Jewels",
     "additionalSets":           "Additional Sets",
     "additionalSkills":         "Additional Skills"
 }
