--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -157,9 +157,10 @@
     "purple":                   null,
     "type":                     null,
     "enhanceFieldSize":         null,
-    "searchCondition":          null,
+    "conditions":               null,
     "requiredEquips":           null,
     "requiredJewels":           null,
     "additionalSets":           null,
-    "additionalSkills":         null
+    "additionalSkills":         null,
+    "noResult":                 null
 }
